# YOLOPv2_ROS

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bev_config.json  bev_transform.py  lane_visualizer.py  package.xml  points.py
config/: bev_params.yaml  lane_detection_config.yaml  yolopv2_params.yaml
launch/: cream_ioniq_node.launch  yolopv2_node.launch
pretrained/: README.md
scripts/: cream_ioniq_node.py  cream_ioniq_node_modular.py  yolopv2_node.py
src/cream_ioniq/: __init__.py
src/cream_ioniq/core/: __init__.py  bev_transform.py  lane_fitting.py
src/cream_ioniq/nodes/: __init__.py
src/cream_ioniq/utils/: __init__.py  image_processing.py
src/cream_ioniq/visualization/: __init__.py  lane_visualizer.py
