<?xml version="1.0"?>
<package format="2">
  <name>yolopv2_ros</name>
  <version>0.0.1</version>
  <description>YOLOPv2 차선 검출 ROS 노드</description>

  <maintainer email="user@user.com">gigacha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python-torch-pip</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-opencv</exec_depend>

  <export>
  </export>
</package> 